--- a/Editor/Styles.uss
+++ b/Editor/Styles.uss
@@ -85,7 +85,7 @@
     width: 14px;
     height: 14px;
     background-color: rgba(88, 88, 88, 0);
-    background-image: url("project://database/Packages/com.lazyredpaw.statichashesdemo/Sprites/Arrow.png?fileID=2800000&guid=a6a045933fd000b4c9ee2355f90f6f24&type=3#Arrow");
+    background-image: url("project://database/Packages/com.lazyredpaw.genericparametersdemo/Sprites/Arrow.png?fileID=2800000&guid=a6a045933fd000b4c9ee2355f90f6f24&type=3#Arrow");
     border-left-color: rgba(92, 92, 92, 0);
     border-right-color: rgba(92, 92, 92, 0);
     border-top-color: rgba(92, 92, 92, 0);
@@ -123,4 +123,9 @@
 
 .width-140px {
     width: 140px;
+}
+
+.button-save-tmp {
+    font-size: 14px;
+    background-color: rgb(0, 88, 35);
 }
